# align-app

./: .codespellrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml
.github/workflows/: e2e-tests.yml  test_and_release.yml
align_app/adm/: action_filtering.py  adm_core.py  config.py  decider.py  decider_definitions.py  decider_registry.py  experiment_config_loader.py  experiment_converters.py  experiment_results_registry.py  hydra_config_loader.py  multiprocess_decider.py  probe.py  probe_registry.py  run_models.py  scenario_registry.py  state_builder.py  system_adm_discovery.py  types.py
align_app/adm/configs/adm/: kaleido.yaml
align_app/adm/configs/hydra/adm/: kaleido.yaml  outlines_comparative_regression_aligned.yaml  outlines_transformers_structured.yaml  outlines_transformers_structured_aligned.yaml  outlines_transformers_structured_baseline.yaml  pipeline_random.yaml
align_app/adm/configs/prompt_engineering/: kdma_descriptions.yml
align_app/adm/decider/: __init__.py  client.py  decider.py  executor.py  types.py  worker.py
align_app/adm/decider/multiprocess_worker/: README.md  __init__.py  test_core.py  test_ctrl_c.py
align_app/adm/decider/tests/: conftest.py  test_decider_package.py  test_executor.py  test_worker.py
align_app/adm/input_output_files/: create_scenario_subset.py
align_app/adm/input_output_files/OpinionQA_dataset_split/: CREGION_Northeast_input_output.json  CREGION_South_input_output.json  EDUCATION_College_graduate_some_postgrad_input_output.json  EDUCATION_Less_than_high_school_input_output.json  INCOME_$100,000_or_more_input_output.json  INCOME_Less_than_$30,000_input_output.json  POLIDEOLOGY_Conservative_input_output.json  POLIDEOLOGY_Liberal_input_output.json  POLIDEOLOGY_Moderate_input_output.json  POLPARTY_Democrat_input_output.json  POLPARTY_Republican_input_output.json  RACE_Asian_input_output.json  RACE_Black_input_output.json  RACE_Hispanic_input_output.json  RACE_White_input_output.json  RELIG_Atheist_input_output.json  RELIG_Hindu_input_output.json  RELIG_Jewish_input_output.json  RELIG_Muslim_input_output.json  RELIG_Protestant_input_output.json  SEX_Female_input_output.json  SEX_Male_input_output.json
align_app/adm/input_output_files/phase2/: June2025-AF-train_20250523.json
align_app/adm/input_output_files/phase2_july/: July2025-AF-train_20250715.json  July2025-MF-train_20250715.json  July2025-MU-train_20250715.json  July2025-PS-train_20250715.json  July2025-SS-train_20250715.json
align_app/adm/models/: comparative_regression_adm.py
align_app/adm/tests/: test_config.py  test_decider_package.py
align_app/app/: alerts_controller.py  core.py  export_experiments.py  import_experiments.py  main.py  prompt.py  prompt_logic.py  run_models.py  runs_controller.py  runs_core.py  runs_edit_logic.py  runs_presentation.py  runs_registry.py  runs_state_adapter.py  runs_table_filter.py  search.py  ui.py  unordered_object.py
align_app/utils/: utils.py
align_app/utils/multiprocess_worker/: README.md  test_ctrl_c.py
bundles/desktop/: README.md  run.py
bundles/docker/: Dockerfile  README.md
bundles/docker/scripts/: build_image.sh  run_image.sh
bundles/docker/setup/: apps.yml  initialize.sh  requirements.txt
bundles/modal/: README.md  app.py
examples/jupyter/: show.ipynb
tests/: conftest.py  test_experiment_deciders.py  test_hydra_config_loader.py  test_import.py  test_probe.py
tests/e2e/: conftest.py  test_alignment_attributes.py  test_config_edit.py  test_llm_selection.py  test_load_experiments.py  test_pipeline_random.py  test_run_replacement.py  test_scenario_edit.py
tests/e2e/page_objects/: align_page.py
tests/unit/: test_cache_backend.py  test_experiment_cache.py  test_runs_presentation.py  test_runs_table_filter.py
