[project]
name = "align-app"
version = "0.4.1"
description = "Web app showcasing an AI system designed to make decisions in scenarios where no single right answer exists."
authors = [
    {name = "Paul Elliott"},
]
dependencies = [
    "trame>=3.7.1",
    "trame-vuetify",
    "trame-vtk",
    "align-system @ git+https://github.com/ITM-Kitware/align-system.git@0.5.7",
    "hydra-core",
    "omegaconf",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
app = [
    "pywebview",
]
jupyter = [
    "jupyterlab",
]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "mypy",
]

[project.scripts]
align-app = "align_app.app:main"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
align_app = [
    "**/*.js",
    "**/*.css",
]
[tool.semantic_release]
version_variables = [
    "align_app/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip build
  python -m build .
"""

[semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[lint.pydocstyle]
convention = "google"
